--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "devDependencies": {
     "eslint": "^5.0.1",
     "eslint-config-google": "^0.9.1"
+  },
+  "scripts": {
+    "test": "atom --test ./spec/"
   }
 }
