Added a testing pipeline to prevent linting errors

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint-config-google": "^0.9.1"
   },
   "scripts": {
+    "lint": "eslint ./spec/ ./lib/",
+    "pretest": "npm run lint",
     "test": "atom --test ./spec/"
   }
 }
