Added option to disable lint

--- a/lib/config.json
+++ b/lib/config.json
@@ -61,5 +61,11 @@
         "order": 1
       }
     }
+  },
+  "lint": {
+    "title": "Enable lint to show missing documentation (experimental)",
+    "type": "boolean",
+    "default": false,
+    "order": 8
   }
 }
