--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
   "scripts": {
     "lint": "eslint ./spec/ ./lib/",
     "pretest": "npm run lint",
-    "test": "atom --test ./spec/"
+    "test": "APM_TEST_PACKAGES='linter' atom --test ./spec/"
   }
 }
